# 2demo-wikipediavectoratlas

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
wikipedia_vector/: cohereReranking.py  config.py  embedding_utils.py  main.py
